--- a/Beta_Telco_Customer_Churn_Analysis.ipynb
+++ b/Beta_Telco_Customer_Churn_Analysis.ipynb
@@ -3546,16 +3546,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the histplot above, we can see that\n",
-    "- Customers with **short tenure** are more likely to churn.\n",
-    "- Customers with **high monthly charges** tend to churn.\n",
-    "- **Total charges** are lower for customers who churn."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## **4. Data Analysis**"
    ]
   },
@@ -7042,6 +7032,8 @@
    "metadata": {},
    "source": [
     "**For Each Segmentation**\n",
+    "\n",
+    "To design an effective loyalty program, we categorized the eight customer segments into three tiers based on their spending behavior and retention potential. These tiers will help tailor rewards and incentives to maximize customer satisfaction and reduce churn.\n",
     "\n",
     "- **Gold**: Long-term-High spender, Long-term-Mid spender, Mid-term-High spender\n",
     "  - **Loyalty Programs**: point rewards. *5%* of MonthlyCharges converted into points per month. MonthlyCharges = $83 → 4 points/month.  \n",
